@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2015 the original author or authors.
+ * Copyright 2002-2016 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -246,6 +246,7 @@ public class TransactionalTestExecutionListener extends AbstractTestExecutionLis
 				if (logger.isDebugEnabled()) {
 					logger.debug("Executing @BeforeTransaction method [" + method + "] for test context " + testContext);
 				}
+				ReflectionUtils.makeAccessible(method);
 				method.invoke(testContext.getTestInstance());
 			}
 		}
@@ -273,6 +274,7 @@ public class TransactionalTestExecutionListener extends AbstractTestExecutionLis
 				if (logger.isDebugEnabled()) {
 					logger.debug("Executing @AfterTransaction method [" + method + "] for test context " + testContext);
 				}
+				ReflectionUtils.makeAccessible(method);
 				method.invoke(testContext.getTestInstance());
 			}
 			catch (InvocationTargetException ex) {
