@@ -677,6 +677,7 @@ Spring 4.3 also improves the caching abstraction as follows:
 
 * The JUnit support in the _Spring TestContext Framework_ now requires JUnit 4.12 or higher.
 * New `SpringRunner` __alias__ for the `SpringJUnit4ClassRunner`.
+* `@BeforeTransaction` and `@AfterTransaction` methods are no longer required to be `public`.
 * Server-side Spring MVC Test supports expectations on response headers with multiple values.
 * Server-side Spring MVC Test parses form data request content and populates request parameters.
 * Client-side REST test support allows indicating how many times a request is expected and
